vlib/v/parser/tests/interface_empty_err.vv
fn main() {
	stru := Stru{}
	fnc1(stru)
}

interface Inter {
}

struct Stru {
	bruh int
}

fn fnc1(inter Inter) {
	println(inter)
}
